Make sure popups fill whole screen on mobile devices

--- a/scss/components/_popups.scss
+++ b/scss/components/_popups.scss
@@ -150,12 +150,17 @@
 
 .jw-popup-as-page {
     @include transform(translate(0, 0));
-    top: $header-height;
-    right: 0;
-    bottom: 0;
+    position: fixed;
+
+    top: 0;
     left: 0;
+    width: 100%;
     max-width: none;
-    padding: 30px calc(50vw - 250px);
+    height: 100%;
+    padding-top: $header-height + 30px;
+    padding-right: calc((100% - 550px) / 2);
+    padding-left: calc((100% - 550px) / 2);
+    overflow-y: auto;
 }
 
 %cover {
@@ -168,11 +173,19 @@
 @include mobile-only () {
 
     .jw-popup {
+        @include transform(translate(0, 0));
         position: fixed;
-        top: 0;
+        top: $header-height-mobile;
+        right: 0;
+        bottom: 0;
         left: 0;
-        width: 100%;
-        max-height: 100%;
         overflow-y: auto;
+    }
+
+    .jw-popup-as-page {
+        top: 0;
+        padding-top: $header-height-mobile + 30px;
+        padding-right: 30px;
+        padding-left: 30px;
     }
 }
